# crypto-trading-system

./: .coverage  .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  example.env  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  expected_openapi.json  fastapi.readme  overal_plan.md
docs/images/: trading-workflow.mmd
migrations/: env.py
migrations/versions/: 7978bff3a922_initial_migration.py  a98c9f26b8e8_add_market_data_table.py  bcf42b88479c_initial_schema.py  e3c76004be45_create_all_tables.py
models/: __init__.py  base.py  market_data.py  paper_trade.py  performance_log.py  trading_crew.py  user.py
routers/: auth.py  binance_data.py  data_sourcing.py  logs.py  management.py  paper_trading.py  trading.py
schemas/: auth.py  binance_data.py  data_sourcing.py  logs.py  management.py  paper_trading.py  trading.py
services/: data_sourcing_service.py  logs_service.py  management_service.py  paper_trading_service.py  performance_logging_service.py  trading_crew_service.py
tests/: conftest.py  test_auth.py  test_binance_data.py  test_data_sourcing.py  test_database.py  test_logs.py  test_paper_trading.py  test_trading.py
utils/: auth_utils.py  binance_client.py  config.py  dependencies.py
